--- a/phala-cloud/networking/setup-grpc-service.mdx
+++ b/phala-cloud/networking/setup-grpc-service.mdx
@@ -70,7 +70,7 @@ Use dstack-ingress for custom domains:
 ```yaml
 services:
   dstack-ingress:
-    image: kvin/dstack-ingress@sha256:2cc3bc50d71faa4d313084237b0f5d1d25963024f2484c7a6414aed075883cdd
+    image: dstacktee/dstack-ingress:20250924@sha256:40429d78060ef3066b5f93676bf3ba7c2e9ac47d4648440febfdda558aed4b32
     ports:
       - "443:443"
     environment:
