--- a/phala-cloud/networking/specifications.mdx
+++ b/phala-cloud/networking/specifications.mdx
@@ -71,7 +71,7 @@ The variables you can change to config networking features.
 
 | Component | Image | Hash |
 |-----------|-------|------|
-| Custom domains | `kvin/dstack-ingress` | `sha256:2cc3bc50d71faa4d313084237b0f5d1d25963024f2484c7a6414aed075883cdd` |
+| Custom domains | `dstacktee/dstack-ingress:20250924` | `sha256:40429d78060ef3066b5f93676bf3ba7c2e9ac47d4648440febfdda558aed4b32` |
 
 ## Rate Limits
 
