--- a/phala-cloud/faqs.mdx
+++ b/phala-cloud/faqs.mdx
@@ -45,7 +45,7 @@ Yes, the data you write to the filesystem inside Docker will persist on the disk
 
 Yes. Please check our Cloud API docs here: https://cloud-api.phala.network/docs\
 API examples: https://github.com/Leechael/phala-cloud-api-example/tree/main/js\
-Or set CI/CD pipline for you instance: https://phala.com/phala-cloud/be-production-ready/ci-cd-automation/setup-a-ci-cd-pipeline
+Or set CI/CD pipeline for you instance: https://phala.com/phala-cloud/be-production-ready/ci-cd-automation/setup-a-ci-cd-pipeline
 
 ### Does the “update” feature sync the latest Docker image?
 
