--- a/phala-cloud/networking/specifications.mdx
+++ b/phala-cloud/networking/specifications.mdx
@@ -65,7 +65,7 @@ The variables you can change to config networking features.
 | HTTP/2 | ✅ (with `g` suffix) | ✅ | ✅ |
 | WebSocket | ✅ | ✅ | ✅ |
 | TCP | ❌ | ✅ (with `s` suffix) | ✅ |
-| UDP | ⚠️  (NAT travesal) | N/A | ✅ |
+| UDP | ⚠️  (NAT traversal) | N/A | ✅ |
 
 ## Docker Images
 
