--- a/phala-cloud/phala-cloud-cli/ci-cd-automation/setup-a-ci-cd-pipeline.mdx
+++ b/phala-cloud/phala-cloud-cli/ci-cd-automation/setup-a-ci-cd-pipeline.mdx
@@ -120,4 +120,4 @@ Common issues:
 
 1. **Authentication Errors**: Verify all secrets are correctly set
 2. **Docker Build Failures**: Check `api-server/Dockerfile` syntax
-3. **Debug Github Actions Locally**: You can debug the Github Actions locally by running `act` command. The `act` can be installed from https://github.com/nektos/act. The secerts you need to set are the same as the ones in the repository secrets to local `.env` file in the root of the repository.
+3. **Debug Github Actions Locally**: You can debug the Github Actions locally by running `act` command. The `act` can be installed from https://github.com/nektos/act. The secrets you need to set are the same as the ones in the repository secrets to local `.env` file in the root of the repository.
